# aws-tsuyo-tsuyo

./: README.md  download_font.py  download_icons.py  main.py  pyproject.toml  update_icons.py
